kfreebsd-8 (8.2~rc1+dfsg-1) UNRELEASED; urgency=low

  * New upstream release.
    - 000_adaptive_machine_arch.diff: Remove (merged).
    - 000_ata.diff: Remove (merged).
    - 000_ufs_lookup.diff: Remove (merged).
    - 004_xargs.diff: Resync.
    - 102_POLL_HUP.diff: Remove (merged).
    - 104_linprocfs.diff: Remove (merged).
    - 105_apm_amd64.diff: Resync.
    - 904_dev_full.diff: Resync.
    - 907_cpu_class.diff: Resync. 
    - 999_firmware.diff: Resync.

 -- Robert Millan <rmh@debian.org>  Tue, 11 Jan 2011 15:49:06 +0100

kfreebsd-8 (8.1+dfsg-7.1) unstable; urgency=high

  * Non-maintainer upload (requested by Petr Salinger).
  * Revert 918_delete_key.diff
    The proper solution needs more changes, unsuitable during deep freeze.
    See #605065, #605777, #607662.

 -- Robert Millan <rmh@debian.org>  Tue, 04 Jan 2011 13:49:34 +0100

kfreebsd-8 (8.1+dfsg-7) unstable; urgency=low

  [ Robert Millan ] 
  * Add 917_track_alignment.diff to remove obsolete warning about track
    alignment in MSDOS partitions. Closes: #603380.
  
  [ Petr Salinger ]
  * Add 918_delete_key.diff to conform to Debian Policy,
    9.8 Keyboard configuration. Closes: #605065.
  * Extend 108_teken_utf8_table.diff for U+25AE. Closes: #605724.

 -- Aurelien Jarno <aurel32@debian.org>  Fri, 03 Dec 2010 17:12:11 +0100

kfreebsd-8 (8.1+dfsg-6) unstable; urgency=low

  [ Petr Salinger ]
  * Drop non-free firmware. Closes: #594940.
    - prune .orig.tar.gz
    - disable firmware in kernel via 999_config.diff
    - drop firmware even as modules inside 999_firmware.diff 
  * Re-enable ulpt in kernel. Closes: #598417.
  * Raise NKPT on amd64 via 916_NKPT_amd64.diff. Closes: #596577.
  
  [ Aurelien Jarno ]
  * Replace 106_teken_op.diff by upstream patch.
  * Add 108_teken_utf8_table.diff to be able to display upper case vowels
    with accent by ignoring the accent. Closes: #595681.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 21 Nov 2010 15:19:57 +0100
