@@ -23,7 +23,15 @@
  	{ 0x00df, 0xe1, 0x00 }, { 0x00e0, 0x85, 0x00 },
  	{ 0x00e1, 0xa0, 0x00 }, { 0x00e2, 0x83, 0x00 },
  	{ 0x00e4, 0x84, 0x00 }, { 0x00e5, 0x86, 0x00 },
-@@ -422,7 +422,8 @@
+@@ -374,6 +382,7 @@
+ 	{ 0x00f8, 0xed, 0x00 }, { 0x00f9, 0x97, 0x00 },
+ 	{ 0x00fa, 0xa3, 0x00 }, { 0x00fb, 0x96, 0x00 },
+ 	{ 0x00fc, 0x81, 0x00 }, { 0x00ff, 0x98, 0x00 },
++	{ 0x013f, 0x4c, 0x00 }, { 0x0140, 0x6c, 0x00 },
+ 	{ 0x0192, 0x9f, 0x00 }, { 0x0393, 0xe2, 0x00 },
+ 	{ 0x0398, 0xe9, 0x00 }, { 0x03a3, 0xe4, 0x00 },
+ 	{ 0x03a6, 0xe8, 0x00 }, { 0x03a9, 0xea, 0x00 },
+@@ -422,7 +431,8 @@
  	{ 0x2584, 0xdc, 0x00 }, { 0x2588, 0xdb, 0x00 },
  	{ 0x258c, 0xdd, 0x00 }, { 0x2590, 0xde, 0x00 },
  	{ 0x2591, 0xb0, 0x02 }, { 0x25a0, 0xfe, 0x00 },
