@@ -1,5 +1,6 @@
 kfreebsd-8 (8.2~rc1+dfsg-1) UNRELEASED; urgency=low
 
+  [ Robert Millan ]
   * New upstream release.
     - 000_adaptive_machine_arch.diff: Remove (merged).
     - 000_ata.diff: Remove (merged).
@@ -7,10 +8,15 @@ kfreebsd-8 (8.2~rc1+dfsg-1) UNRELEASED; urgency=low
     - 004_xargs.diff: Resync.
     - 102_POLL_HUP.diff: Remove (merged).
     - 104_linprocfs.diff: Remove (merged).
-    - 105_apm_amd64.diff: Resync.
     - 904_dev_full.diff: Resync.
-    - 907_cpu_class.diff: Resync. 
     - 999_firmware.diff: Resync.
+
+   [ Petr Salinger ]
+  * New upstream release.
+    - 105_apm_amd64.diff: Resync.
+    - 907_cpu_class.diff: Resync.
+  * Extend 108_teken_utf8_table.diff for middle-dot l/L.
+    Closes: #609681. Thanks to Robert Millan.
 
  -- Robert Millan <rmh@debian.org>  Tue, 11 Jan 2011 15:49:06 +0100
 
